PHOENIX-6140 Update connectors maven configuration
update to apache parent 23
update versions/remove redundant version tags
remove obsolete maven-eclipse-plugin
fix up javadoc errors
udpate dependencies to pass dependecy:analyze
convert code to thirdparty guava
reformat poms to use 2 spaces indents as per maven style guide
remove github workflows test config file